test+chore: Mock-LLM 全链路测试基建 + 项目级格式重审 + 文档定位重写
- Mock-LLM 四模式基建与全链路自动化 (SSE/预警/工具调用/WS); 修复三处启动崩溃 (@All/Optional 化/WS duplicated context)
- CI service 容器 + 基础设施缺席守卫; 日记 RED 接入通知 fan-out
- 项目级格式重审: 真 Allman/Javadoc 净化/去文档引用/quickFormat 统一
- README 定位重写 (可插拔平台) + 39 键配置表 + 部署编排 (ASR 卷/native-access)